--- a/ExcelAPI/src/main/resources/application.properties
+++ b/ExcelAPI/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port= 8086
+server.port= 8090
 spring.jpa.database=POSTGRESQL
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database.
@@ -11,10 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 # -------------------
 # Data-source config.
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/DeveloperInfo
+spring.datasource.url=jdbc:postgresql://localhost:5432/DBDeveloper
 spring.datasource.username=postgres
-spring.datasource.password=gj555700
+spring.datasource.password=root
 
-# file configuration
+#file config
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
